--- a/PA_errors_python_JL.ipynb
+++ b/PA_errors_python_JL.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "kSVzwPRWrt2f"
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -123,7 +123,7 @@
        "63"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "GcYcTr8Ort2g"
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "UXR-ONkZrt2h"
    },
@@ -271,7 +271,7 @@
        "[64 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 170,
    "metadata": {
     "id": "FBDV4Xdrrt2h"
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "       2.650e+01])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "352"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,17 +553,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "191.0"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(top_secret)/5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Turn your one-dimensional array of numbers into a two-dimensional array (matrix) with 5 columns.\n",
-    "Separately from your top secret numbers, create an array of all the even numbers between 1 and 382. Name it \"evens\". That is, \"evens\" should contain 2, 4, 6, 8 ..., 382.\n",
-    "Subtract the \"evens\" vector from the first column of your secret message matrix.\n",
-    "Subtract 100 from all numbers in the 18-24th rows of the 3rd column.\n",
-    "Multiply all numbers in the 4th and 5th column by 2.\n",
-    "Turn your matrix back into a one dimensional array.\n",
-    "\n"
+    "first_column = top_secret[0:len(top_secret)//5]\n",
+    "second_column = top_secret[len(top_secret)//5: 2*(len(top_secret)//5)]\n",
+    "third_column = top_secret[(2*len(top_secret)//5): 3*(len(top_secret)//5)]\n",
+    "fourth_column = top_secret[(3*len(top_secret)//5): 4*(len(top_secret)//5)]\n",
+    "fifth_column = top_secret[(4*len(top_secret)//5): 5*(len(top_secret)//5)]\n",
+    "\n",
+    "top_secret = matrix([first_column,second_column,third_column,fourth_column,fifth_column])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evens = np.arange(2,384,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_secret[0] = top_secret[0] - evens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_secret[2,18:24] = top_secret[2,18:24]-100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_secret[3] = top_secret[3]*2\n",
+    "top_secret[4] = top_secret[4]*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.matrix"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(top_secret[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "concatenate() takes from 1 to 3 positional arguments but 5 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[180], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m top_secret \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(top_secret[\u001b[38;5;241m0\u001b[39m],  top_secret[\u001b[38;5;241m1\u001b[39m],  top_secret[\u001b[38;5;241m2\u001b[39m],  top_secret[\u001b[38;5;241m3\u001b[39m],  top_secret[\u001b[38;5;241m4\u001b[39m])\n\u001b[0;32m      2\u001b[0m top_secret\n",
+      "File \u001b[1;32m<__array_function__ internals>:198\u001b[0m, in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: concatenate() takes from 1 to 3 positional arguments but 5 were given"
+     ]
+    }
+   ],
+   "source": [
+    "top_secret = np.concatenate(top_secret[0],  top_secret[1],  top_secret[2],  top_secret[3],  top_secret[4])\n",
+    "top_secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(top_secret)"
    ]
   },
   {
