more working through

--- a/PA_errors_python_JL.ipynb
+++ b/PA_errors_python_JL.ipynb
@@ -145,11 +145,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 184,
    "metadata": {
     "id": "GcYcTr8Ort2g"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm',\n",
+       "       'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z',\n",
+       "       'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M',\n",
+       "       'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z',\n",
+       "       '.', ',', '!', '?', \"'\", '/', '(', ')', ' ', '-', ';', ':'],\n",
+       "      dtype='<U1')"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import array\n",
@@ -161,7 +177,8 @@
     "punctuation = array([\".\", \",\", \"!\", \"?\", \"'\", \"/\", \"(\", \")\", \" \", \"-\", \";\", \":\"])\n",
     "\n",
     "## Use np.concatenate to combine into long array\n",
-    "all_symbols = np.concatenate((lower_case, upper_case, punctuation))"
+    "all_symbols = np.concatenate((lower_case, upper_case, punctuation))\n",
+    "all_symbols"
    ]
   },
   {
@@ -295,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 256,
    "metadata": {
     "id": "FBDV4Xdrrt2h"
    },
@@ -350,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +535,7 @@
        "       2.650e+01])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +559,7 @@
        "352"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +579,7 @@
        "191.0"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,16 +623,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_secret[2,18:24] = top_secret[2,18:24]-100"
+    "top_secret[2,17:24] = top_secret[2,17:24]-100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,65 +642,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.matrix"
+       "array([[1.440e+02, 1.000e+00, 5.290e+02, 3.610e+02, 3.721e+03, 1.521e+03,\n",
+       "        6.400e+01, 1.000e+00, 1.521e+03, 3.721e+03, 9.000e+00, 1.000e+00,\n",
+       "        1.521e+03, 9.000e+00, 6.400e+01, 3.025e+03, 3.721e+03, 7.840e+02,\n",
+       "        2.500e+01, 5.290e+02, 1.000e+00, 3.240e+02, 2.500e+01, 3.721e+03,\n",
+       "        1.521e+03, 6.400e+01, 2.500e+01, 3.721e+03, 1.296e+03, 4.410e+02,\n",
+       "        4.000e+00, 1.000e+02, 4.410e+02, 4.000e+00, 3.721e+03, 4.000e+00,\n",
+       "        8.100e+01, 3.240e+02, 1.600e+01, 2.916e+03, 3.721e+03, 1.000e+00,\n",
+       "        1.960e+02, 1.600e+01, 3.721e+03, 3.610e+02, 6.400e+01, 4.410e+02,\n",
+       "        1.960e+02, 3.721e+03, 3.721e+03, 3.721e+03, 2.116e+03, 6.400e+01,\n",
+       "        2.500e+01, 3.721e+03, 3.600e+01, 3.240e+02, 4.410e+02, 1.690e+02,\n",
+       "        8.100e+01, 2.250e+02, 4.410e+02, 3.610e+02, 3.721e+03, 7.840e+02,\n",
+       "        1.000e+00, 1.960e+02, 1.600e+01, 2.500e+01, 3.240e+02, 3.610e+02,\n",
+       "        1.960e+02, 1.000e+00, 1.521e+03, 9.000e+00, 6.400e+01, 3.025e+03,\n",
+       "        3.364e+03, 3.721e+03, 1.156e+03, 2.500e+01, 3.721e+03, 1.521e+03,\n",
+       "        2.250e+02, 2.250e+02, 1.210e+02, 3.721e+03, 6.400e+01, 8.100e+01,\n",
+       "        3.610e+02, 3.721e+03, 4.840e+02, 2.250e+02, 3.240e+02, 2.560e+02,\n",
+       "        1.000e+00, 1.440e+02, 3.721e+03, 3.610e+02, 5.290e+02, 2.250e+02,\n",
+       "        3.240e+02, 1.600e+01, 3.721e+03, 8.100e+01, 1.960e+02, 3.721e+03,\n",
+       "        6.400e+01, 1.000e+00, 1.960e+02, 1.600e+01, 3.969e+03, 3.721e+03,\n",
+       "        3.721e+03, 3.721e+03, 1.444e+03, 2.250e+02, 1.960e+02, 4.900e+01,\n",
+       "        3.721e+03, 1.521e+03, 8.100e+01, 1.690e+02, 2.500e+01, 3.721e+03,\n",
+       "        1.521e+03, 6.400e+01, 2.500e+01, 3.721e+03, 1.690e+02, 1.000e+00,\n",
+       "        1.960e+02, 5.760e+02, 2.250e+02, 1.690e+02, 2.500e+01, 3.721e+03,\n",
+       "        3.600e+01, 2.250e+02, 2.500e+01, 3.721e+03, 6.400e+01, 2.500e+01,\n",
+       "        3.721e+03, 3.610e+02, 2.250e+02, 4.410e+02, 4.900e+01, 6.400e+01,\n",
+       "        1.521e+03, 3.844e+03, 3.721e+03, 2.025e+03, 2.250e+02, 3.721e+03,\n",
+       "        3.240e+02, 2.500e+01, 3.610e+02, 1.521e+03, 2.500e+01, 1.600e+01,\n",
+       "        3.721e+03, 6.400e+01, 2.500e+01, 3.721e+03, 4.000e+00, 6.250e+02,\n",
+       "        3.721e+03, 1.521e+03, 6.400e+01, 2.500e+01, 3.721e+03, 2.116e+03,\n",
+       "        4.410e+02, 1.690e+02, 1.521e+03, 4.410e+02, 1.690e+02, 3.721e+03,\n",
+       "        1.521e+03, 3.240e+02, 2.500e+01, 2.500e+01, 3.721e+03, 3.721e+03,\n",
+       "        3.721e+03, 7.290e+02, 1.960e+02, 1.600e+01, 3.721e+03]])"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_secret[1])"
+    "array(top_secret[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "concatenate() takes from 1 to 3 positional arguments but 5 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[180], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m top_secret \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(top_secret[\u001b[38;5;241m0\u001b[39m],  top_secret[\u001b[38;5;241m1\u001b[39m],  top_secret[\u001b[38;5;241m2\u001b[39m],  top_secret[\u001b[38;5;241m3\u001b[39m],  top_secret[\u001b[38;5;241m4\u001b[39m])\n\u001b[0;32m      2\u001b[0m top_secret\n",
-      "File \u001b[1;32m<__array_function__ internals>:198\u001b[0m, in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: concatenate() takes from 1 to 3 positional arguments but 5 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_secret = np.concatenate(top_secret[0],  top_secret[1],  top_secret[2],  top_secret[3],  top_secret[4])\n",
-    "top_secret"
+    "top_secret = array(top_secret.ravel())[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "500"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(top_secret)"
+    "len(top_secret[0:500])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True, False, False,  True,  True, False,  True, False, False,\n",
+       "        True, False,  True, False,  True, False,  True,  True, False,\n",
+       "        True, False,  True, False,  True, False, False, False,  True,\n",
+       "        True, False, False,  True,  True,  True, False, False, False,\n",
+       "       False, False, False, False,  True, False, False, False, False,\n",
+       "       False,  True, False,  True, False, False,  True,  True, False,\n",
+       "        True, False, False, False,  True, False, False,  True, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "        True,  True, False, False, False, False,  True, False, False,\n",
+       "        True, False,  True, False, False, False, False, False,  True,\n",
+       "       False,  True,  True,  True, False, False, False, False,  True,\n",
+       "       False,  True, False,  True, False, False,  True,  True, False,\n",
+       "       False,  True,  True,  True,  True, False, False, False,  True,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False,  True,  True, False,  True,\n",
+       "        True, False, False, False, False,  True,  True, False, False,\n",
+       "        True,  True, False,  True, False, False, False,  True,  True,\n",
+       "       False,  True, False,  True, False, False, False, False,  True,\n",
+       "        True, False, False,  True,  True, False,  True,  True, False,\n",
+       "       False, False,  True, False,  True, False,  True, False, False,\n",
+       "        True,  True, False, False, False,  True,  True, False,  True,\n",
+       "       False,  True,  True, False,  True, False, False,  True, False,\n",
+       "        True, False, False,  True, False, False, False, False, False,\n",
+       "       False,  True,  True, False,  True, False, False, False,  True,\n",
+       "       False, False, False, False, False,  True, False,  True,  True,\n",
+       "       False, False, False,  True, False,  True,  True, False, False,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "        True,  True, False, False, False, False, False, False,  True,\n",
+       "       False, False, False, False, False, False,  True, False,  True,\n",
+       "       False, False,  True,  True, False,  True, False, False, False,\n",
+       "       False, False, False, False,  True, False, False,  True, False,\n",
+       "        True, False, False,  True,  True, False, False,  True, False,\n",
+       "       False, False, False,  True, False,  True, False,  True, False,\n",
+       "        True,  True, False, False, False, False,  True,  True, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "        True,  True, False,  True,  True, False,  True, False, False,\n",
+       "       False,  True,  True, False, False, False, False, False, False,\n",
+       "       False, False, False, False,  True,  True, False, False, False,\n",
+       "       False, False,  True, False, False, False, False, False,  True,\n",
+       "       False,  True, False,  True,  True, False,  True, False,  True,\n",
+       "       False, False, False,  True, False, False,  True,  True, False,\n",
+       "       False, False, False, False,  True, False, False,  True, False,\n",
+       "       False,  True, False, False, False,  True,  True,  True, False,\n",
+       "        True, False, False,  True, False, False,  True,  True, False,\n",
+       "       False,  True,  True, False, False, False, False, False,  True,\n",
+       "       False, False, False, False, False,  True,  True, False, False,\n",
+       "        True,  True,  True,  True, False, False, False,  True, False,\n",
+       "       False, False, False,  True, False,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_secret[0:500]<100"
    ]
   },
   {
