Wrangle and title for Lab1

--- a/Lab1 - GSB544.ipynb
+++ b/Lab1 - GSB544.ipynb
@@ -9,6 +9,7 @@
     "title: 'Lab 1: Gapminder'\n",
     "output: html\n",
     "theme: cosmo\n",
+    "self-contained: True\n",
     "---"
    ]
   },
