--- a/PA_wrangle.ipynb
+++ b/PA_wrangle.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "id": "9asR0S4_eiRA"
    },
@@ -274,7 +274,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,6 +286,13 @@
     "colleges = pd.read_csv(\"https://www.dropbox.com/s/bt5hvctdevhbq6j/colleges.csv?dl=1\")\n",
     "colleges.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -313,35 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "id": "1QZE0D5TeiRC"
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "('INSTNM', 'CITY', 'STABBR', 'ZIP', 'CONTROL', 'ADM_RATE', 'SAT_AVG', 'TUITIONFEE_IN', 'TUITIONFEE_OUT', 'UGDS', 'REGION')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda33\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32m~\\anaconda33\\Lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda33\\Lib\\site-packages\\pandas\\_libs\\index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: ('INSTNM', 'CITY', 'STABBR', 'ZIP', 'CONTROL', 'ADM_RATE', 'SAT_AVG', 'TUITIONFEE_IN', 'TUITIONFEE_OUT', 'UGDS', 'REGION')",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m colleges_clean \u001b[38;5;241m=\u001b[39m colleges[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mINSTNM\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCITY\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSTABBR\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZIP\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCONTROL\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mADM_RATE\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSAT_AVG\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_IN\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_OUT\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUGDS\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mREGION\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[1;32m~\\anaconda33\\Lib\\site-packages\\pandas\\core\\frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\anaconda33\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: ('INSTNM', 'CITY', 'STABBR', 'ZIP', 'CONTROL', 'ADM_RATE', 'SAT_AVG', 'TUITIONFEE_IN', 'TUITIONFEE_OUT', 'UGDS', 'REGION')"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "colleges_clean = colleges['INSTNM', 'CITY', 'STABBR', 'ZIP', 'CONTROL', 'ADM_RATE', 'SAT_AVG', 'TUITIONFEE_IN', 'TUITIONFEE_OUT', 'UGDS', 'REGION']"
+    "colleges_clean = colleges[['INSTNM', 'CITY', 'STABBR', 'ZIP', 'CONTROL', 'ADM_RATE', 'SAT_AVG', 'TUITIONFEE_IN', 'TUITIONFEE_OUT', 'UGDS', 'REGION']]"
    ]
   },
   {
@@ -357,13 +342,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "E7Xx6YsKeiRC"
    },
    "outputs": [],
    "source": [
-    "colleges_clean = colleges_clean[colleges_clean['CONTROL'] == 1 | 2]"
+    "colleges_clean = colleges_clean[colleges_clean['CONTROL'] != 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(colleges_clean['REGION'][0])"
    ]
   },
   {
@@ -381,31 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "id": "cIOpSHCjeiRC"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'colleges_clean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_IN\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_IN\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumeric\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_OUT\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTUITIONFEE_OUT\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumeric\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSAT_AVG\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m colleges_clean[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSAT_AVG\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumeric\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'colleges_clean' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "colleges_clean['TUITIONFEE_IN'] = colleges_clean['TUITIONFEE_IN'].astype('numeric')\n",
+    "colleges_clean['TUITIONFEE_IN'] = colleges_clean['TUITIONFEE_IN'].astype(float)\n",
     "\n",
-    "colleges_clean['TUITIONFEE_OUT'] = colleges_clean['TUITIONFEE_OUT'].astype('numeric')\n",
+    "colleges_clean['TUITIONFEE_OUT'] = colleges_clean['TUITIONFEE_OUT'].astype(float)\n",
     "\n",
-    "colleges_clean['SAT_AVG'] = colleges_clean['SAT_AVG'].astype('numeric')\n",
+    "colleges_clean['SAT_AVG'] = colleges_clean['SAT_AVG'].astype(float)\n",
     "\n",
-    "colleges_clean['ADM_RATE'] = colleges_clean['ADM_Rate'].astype('numeric')"
+    "colleges_clean['ADM_RATE'] = colleges_clean['ADM_RATE'].astype(float)"
    ]
   },
   {
@@ -425,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "TFBmCHMLeiRD"
    },
    "outputs": [],
    "source": [
-    "colleges_clean['CONTROL'].astype('category')\n",
-    "colleges_clean['REGION'].astype('category')"
+    "colleges_clean['CONTROL'] = colleges_clean['CONTROL'].astype('str')\n",
+    "colleges_clean['REGION'] = colleges_clean['REGION'].astype('str')"
    ]
   },
   {
@@ -448,13 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "i3gRwBgbeiRD"
    },
    "outputs": [],
    "source": [
-    "colleges_clean['TUITION_DIFF'] = TUITIONFEE_OUT - TUITIONFEE_IN"
+    "colleges_clean['TUITION_DIFF'] = colleges_clean['TUITIONFEE_OUT'] - colleges_clean['TUITIONFEE_IN']"
    ]
   },
   {
@@ -472,14 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "520ghDYBeiRD"
    },
    "outputs": [],
    "source": [
-    "colleges_clean = colleges_clean.dropna(axis = 1)"
+    "colleges_clean = colleges_clean.dropna(axis = 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -509,6 +509,201 @@
     "\n",
     "8. Of the two options remaining at this step, Ephelia will attend the cheaper one.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean = colleges_clean[colleges_clean['REGION'] == '1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_quantile = colleges_clean['ADM_RATE'].quantile(.25)\n",
+    "colleges_clean = colleges_clean[colleges_clean['ADM_RATE'] < first_quantile]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean = colleges_clean[colleges_clean['TUITIONFEE_IN'] == colleges_clean['TUITIONFEE_OUT']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean = colleges_clean[colleges_clean['SAT_AVG']%2!=0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean = colleges_clean[colleges_clean['CITY'] != 'Boston']\n",
+    "colleges_clean = colleges_clean[colleges_clean['STABBR'] != 'NH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean['Applied'] = (colleges_clean['UGDS']*.25)/colleges_clean['ADM_RATE']\n",
+    "colleges_clean = colleges_clean[colleges_clean['Applied'] > 3000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INSTNM</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STABBR</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>CONTROL</th>\n",
+       "      <th>ADM_RATE</th>\n",
+       "      <th>SAT_AVG</th>\n",
+       "      <th>TUITIONFEE_IN</th>\n",
+       "      <th>TUITIONFEE_OUT</th>\n",
+       "      <th>UGDS</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>TUITION_DIFF</th>\n",
+       "      <th>Applied</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1500</th>\n",
+       "      <td>Amherst College</td>\n",
+       "      <td>Amherst</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>01002-5000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.1290</td>\n",
+       "      <td>1497.0</td>\n",
+       "      <td>54310.0</td>\n",
+       "      <td>54310.0</td>\n",
+       "      <td>1835.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3556.201550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1619</th>\n",
+       "      <td>Williams College</td>\n",
+       "      <td>Williamstown</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>1267</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.1458</td>\n",
+       "      <td>1493.0</td>\n",
+       "      <td>53550.0</td>\n",
+       "      <td>53550.0</td>\n",
+       "      <td>2033.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3485.939643</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                INSTNM          CITY STABBR         ZIP CONTROL  ADM_RATE  \\\n",
+       "1500   Amherst College       Amherst     MA  01002-5000       2    0.1290   \n",
+       "1619  Williams College  Williamstown     MA        1267       2    0.1458   \n",
+       "\n",
+       "      SAT_AVG  TUITIONFEE_IN  TUITIONFEE_OUT    UGDS REGION  TUITION_DIFF  \\\n",
+       "1500   1497.0        54310.0         54310.0  1835.0      1           0.0   \n",
+       "1619   1493.0        53550.0         53550.0  2033.0      1           0.0   \n",
+       "\n",
+       "          Applied  \n",
+       "1500  3556.201550  \n",
+       "1619  3485.939643  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colleges_clean = colleges_clean[colleges_clean['INSTNM'] != 'Harvard University']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colleges_clean = colleges_clean.sort_values(by =['TUITIONFEE_IN'], ascending = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Williams College'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colleges_clean = colleges_clean.reset_index(drop=True)\n",
+    "colleges_clean.loc[0, 'INSTNM']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
